# tuapi

./: '  ;  Cargo.toml  README.md
src/: app.rs  cli.rs  input_handling.rs  main.rs  request.rs  ui.rs
src/app/: form.rs  mod.rs
src/event/: input.rs  mod.rs  navigation.rs  popup.rs
src/ui/: input.rs  mod.rs  popup.rs  request_tab.rs  response.rs  syntax.rs
