[package]
name = "tuapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.44.0"
clap = { version = "4.5.20", features = ["derive"] }
crossterm = "0.26.1"
once_cell = "1.18.0"
ratatui = { version = "0.22.0", features = ["all-widgets"] }
reqwest = { version = "0.11.18", features = ["blocking", "json"]}
serde = "1"
serde_json = "1"
syntect = "5"
tokio = { version = "1.29.1", features = ["full"] }
